build/ml/cp_parser_emi.output
   0  $accept : %entry% $end

   1  main : section EOI

   2  section : S_VERSION STRING
   3          | S_PARAMETER BEGIN params END
   4          | S_METHODS BEGIN methods END
   5          | S_METHODS LPAREN expr RPAREN BEGIN methods END
   6          | S_CHECK BEGIN checks END
   7          | S_CHECK LPAREN expr RPAREN BEGIN checks END
   8          | S_INTERFACE BEGIN interfaces END
   9          | S_INTERFACE LPAREN expr RPAREN BEGIN interfaces END
  10          | S_INTERFACE LPAREN expr RPAREN BEGIN NULL EOI END
  11          | S_SIGNALS BEGIN signals END
  12          | S_SIGNALS LPAREN expr RPAREN BEGIN signals END
  13          | S_MAPPING BEGIN mappings END
  14          | S_MAPPING LPAREN expr RPAREN BEGIN mappings END
  15          | S_MAPPING LPAREN expr RPAREN BEGIN NULL EOI END
  16          | S_TOP BEGIN instructions END
  17          | S_TOP LPAREN expr RPAREN BEGIN instructions END
  18          | name SEP1 S_PROCESS BEGIN instructions END
  19          | name SEP1 S_PROCESS LPAREN expr RPAREN BEGIN instructions END
  20          | name SEP1 S_ACCESS BEGIN access END
  21          | name SEP1 S_ACCESS LPAREN expr RPAREN BEGIN access END

  22  params : param_def EOI
  23         | param_def EOI params

  24  param_def : param
  25            | param WITH attr_list

  26  param : name
  27        | name ASSIGN expr
  28        | name LBRAK range RBRAK ASSIGN expr
  29        | name LBRAK arg_list RBRAK ASSIGN expr
  30        | name LBRAK range RBRAK
  31        | name LBRAK arg_list RBRAK
  32        | name LBRAK range SEP1 data_type RBRAK
  33        | name LBRAK range SEP1 data_type RBRAK ASSIGN expr
  34        | name LBRAK arg_list SEP1 data_type RBRAK
  35        | name LBRAK arg_list SEP1 data_type RBRAK ASSIGN expr

  36  data_type : LOGIC
  37            | SIGNED
  38            | INT
  39            | BOOL
  40            | CHAR
  41            | STRINGS
  42            | VAR

  43  attr_list : IDENT
  44            | IDENT AND attr_list

  45  methods : method_decl EOI
  46          | method_decl EOI methods

  47  method_decl : func

  48  checks : check EOI
  49         | check EOI checks

  50  check : expr

  51  signals : signal_decl EOI
  52          | signal_decl EOI signals

  53  sig_dir : IN
  54          | OUT

  55  signal_decl : VAR IDENT
  56              | FOREACH VAR IDENT IN foreach DO BEGIN signals END
  57              | CONSTANT name
  58              | CONSTANT name SEP1 arg_type ASSIGN2 expr
  59              | SIGNAL name SEP1 arg_type
  60              | SIGNAL name SEP1 sig_dir arg_type
  61              | VARIABLE name SEP1 arg_type
  62              | SHARED VARIABLE name SEP1 arg_type
  63              | TYPE name IS LCURL name_list RCURL
  64              | TYPE name IS ARRAY LBRAK range RBRAK OF arg_type
  65              | TYPE name

  66  interfaces : interface_decl EOI
  67             | interface_decl EOI interfaces

  68  interface_decl : FOREACH VAR IDENT IN foreach DO BEGIN interfaces END
  69                 | SIGNAL name SEP1 sig_dir arg_type

  70  mappings : mapping_decl EOI
  71           | mapping_decl EOI mappings

  72  mapping_decl : FOREACH VAR IDENT IN foreach DO BEGIN mappings END
  73               | name FOLLOW name

  74  access : access_decl EOI
  75         | access_decl EOI access

  76  access_decl : S_DATA BEGIN data_exprs END
  77              | S_CONTROL BEGIN control_exprs END
  78              | S_IMPORT BEGIN methods END
  79              | S_SET BEGIN data_exprs END

  80  foreach : VAR IDENT
  81          | foreach AND foreach
  82          | foreach OR foreach
  83          | foreach XOR foreach

  84  data_exprs : data_expr EOI
  85             | data_expr EOI data_exprs

  86  control_exprs : control_expr EOI
  87                | control_expr EOI control_exprs

  88  data_expr : element ASSIGN expr WHEN expr ELSE expr
  89            | element ASSIGN expr
  90            | element ASSIGN2 expr
  91            | NULL
  92            | func

  93  ifothers : IF OTHERS THEN block_instr

  94  ifseq : IF expr THEN block_instr ifseq
  95        | ELSIF expr THEN block_instr ifseq
  96        | IF expr THEN block_instr ifothers
  97        | ELSIF expr THEN block_instr ifothers
  98        | ELSIF expr THEN block_instr
  99        | ELSIF expr THEN block_instr ELSE block_instr
 100        | ELSE IF expr THEN block_instr ifseq
 101        | ELSE IF expr THEN block_instr
 102        | ELSE IF expr THEN block_instr ELSE block_instr

 103  control_expr : WAIT FOR expr
 104               | WAIT UNTIL expr
 105               | IF expr THEN block_instr
 106               | IF expr THEN block_instr ELSE block_instr
 107               | IF OTHERS THEN block_instr
 108               | ifseq
 109               | CASE expr IS BEGIN when_list END
 110               | FOR expr EQ range DO block_instr
 111               | WITH expr DO block_instr
 112               | NULL

 113  block_instr : instruction
 114              | BEGIN instructions END

 115  when_list : when_expr
 116            | when_expr when_list

 117  when_expr : WHEN OTHERS FOLLOW block_instr EOI
 118            | WHEN expr FOLLOW block_instr EOI

 119  name : IDENT
 120       | VAR IDENT
 121       | var_expr

 122  var_expr : IDENT
 123           | VAR IDENT
 124           | VAR IDENT var_expr
 125           | IDENT var_expr

 126  name_list : name
 127            | name SEP2 name_list

 128  func : name LPAREN arg_list RPAREN
 129       | name LPAREN RPAREN

 130  arg_list : arg
 131           | arg SEP2 arg_list

 132  arg : expr
 133      | OR
 134      | LHS SEP1 arg_type
 135      | RHS SEP1 arg_type
 136      | LRHS SEP1 arg_type
 137      | LHS
 138      | RHS
 139      | LRHS

 140  arg_type : LOGIC
 141           | BOOL
 142           | INT LBRAK expr RBRAK
 143           | SIGNED LBRAK expr RBRAK
 144           | LOGIC LBRAK expr RBRAK
 145           | LOGIC LBRAK range RBRAK
 146           | NATURAL
 147           | STRINGS
 148           | name

 149  instructions : instruction EOI
 150               | instruction EOI instructions

 151  instruction : VARIABLE name SEP1 arg_type
 152              | data_expr
 153              | control_expr
 154              | SEQUENCE BEGIN instructions END
 155              | FOREACH VAR IDENT IN foreach DO BEGIN instructions END
 156              | FOREACH VAR IDENT IN foreach DO instruction

 157  expr : expr PLUS expr
 158       | expr EXP2 expr
 159       | MINUS expr
 160       | NOT expr
 161       | expr MINUS expr
 162       | expr TIMES expr
 163       | expr DIVI expr
 164       | expr EQ expr
 165       | expr LT expr
 166       | expr GT expr
 167       | expr ASSIGN expr
 168       | expr GEQ expr
 169       | expr NEQ expr
 170       | expr AND expr
 171       | expr OR expr
 172       | expr XOR expr
 173       | expr CONC expr
 174       | LPAREN expr RPAREN
 175       | element
 176       | func

 177  range : expr DOWNTO expr
 178        | expr TO expr
 179        | expr

 180  element : STRING
 181          | VALUE
 182          | VALUE timeunit
 183          | VALUE frequnit
 184          | OTHERS FOLLOW VALUE
 185          | name
 186          | name LBRAK range RBRAK
 187          | name ACC name

 188  timeunit : NSEC
 189           | USEC
 190           | MSEC
 191           | SEC

 192  frequnit : HZ
 193           | KHZ
 194           | MHZ
 195           | GHZ

 196  %entry% : '\001' main

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . main  (196)

	IDENT  shift 3
	S_VERSION  shift 4
	S_PARAMETER  shift 5
	S_METHODS  shift 6
	S_SIGNALS  shift 7
	S_INTERFACE  shift 8
	S_MAPPING  shift 9
	S_TOP  shift 10
	S_CHECK  shift 11
	VAR  shift 12
	.  error

	main  goto 13
	section  goto 14
	name  goto 15
	var_expr  goto 16


state 2
	$accept : %entry% . $end  (0)

	$end  accept


3: reduce/reduce conflict (reduce 119, reduce 122) on DO
3: reduce/reduce conflict (reduce 119, reduce 122) on IF
3: reduce/reduce conflict (reduce 119, reduce 122) on THEN
3: reduce/reduce conflict (reduce 119, reduce 122) on ELSE
3: reduce/reduce conflict (reduce 119, reduce 122) on ELSIF
3: reduce/reduce conflict (reduce 119, reduce 122) on WHEN
3: reduce/reduce conflict (reduce 119, reduce 122) on IS
3: reduce/reduce conflict (reduce 119, reduce 122) on EOI
3: reduce/reduce conflict (reduce 119, reduce 122) on SEP1
3: reduce/reduce conflict (reduce 119, reduce 122) on SEP2
3: reduce/reduce conflict (reduce 119, reduce 122) on LPAREN
3: reduce/reduce conflict (reduce 119, reduce 122) on RPAREN
3: reduce/reduce conflict (reduce 119, reduce 122) on LBRAK
3: reduce/reduce conflict (reduce 119, reduce 122) on RBRAK
3: reduce/reduce conflict (reduce 119, reduce 122) on RCURL
3: reduce/reduce conflict (reduce 119, reduce 122) on ACC
3: reduce/reduce conflict (reduce 119, reduce 122) on FOLLOW
3: reduce/reduce conflict (reduce 119, reduce 122) on EQ
3: reduce/reduce conflict (reduce 119, reduce 122) on NEQ
3: reduce/reduce conflict (reduce 119, reduce 122) on LT
3: reduce/reduce conflict (reduce 119, reduce 122) on GT
3: reduce/reduce conflict (reduce 119, reduce 122) on ASSIGN
3: reduce/reduce conflict (reduce 119, reduce 122) on ASSIGN2
3: reduce/reduce conflict (reduce 119, reduce 122) on GEQ
3: reduce/reduce conflict (reduce 119, reduce 122) on PLUS
3: reduce/reduce conflict (reduce 119, reduce 122) on MINUS
3: reduce/reduce conflict (reduce 119, reduce 122) on TIMES
3: reduce/reduce conflict (reduce 119, reduce 122) on DIVI
3: reduce/reduce conflict (reduce 119, reduce 122) on EXP2
3: reduce/reduce conflict (reduce 119, reduce 122) on CONC
3: reduce/reduce conflict (reduce 119, reduce 122) on AND
3: reduce/reduce conflict (reduce 119, reduce 122) on OR
3: reduce/reduce conflict (reduce 119, reduce 122) on XOR
3: reduce/reduce conflict (reduce 119, reduce 122) on TO
3: reduce/reduce conflict (reduce 119, reduce 122) on DOWNTO
3: reduce/reduce conflict (reduce 119, reduce 122) on WITH
state 3
	name : IDENT .  (119)
	var_expr : IDENT .  (122)
	var_expr : IDENT . var_expr  (125)

	IDENT  shift 17
	VAR  shift 18
	DO  reduce 119
	IF  reduce 119
	THEN  reduce 119
	ELSE  reduce 119
	ELSIF  reduce 119
	WHEN  reduce 119
	IS  reduce 119
	EOI  reduce 119
	SEP1  reduce 119
	SEP2  reduce 119
	LPAREN  reduce 119
	RPAREN  reduce 119
	LBRAK  reduce 119
	RBRAK  reduce 119
	RCURL  reduce 119
	ACC  reduce 119
	FOLLOW  reduce 119
	EQ  reduce 119
	NEQ  reduce 119
	LT  reduce 119
	GT  reduce 119
	ASSIGN  reduce 119
	ASSIGN2  reduce 119
	GEQ  reduce 119
	PLUS  reduce 119
	MINUS  reduce 119
	TIMES  reduce 119
	DIVI  reduce 119
	EXP2  reduce 119
	CONC  reduce 119
	AND  reduce 119
	OR  reduce 119
	XOR  reduce 119
	TO  reduce 119
	DOWNTO  reduce 119
	WITH  reduce 119

	var_expr  goto 19


state 4
	section : S_VERSION . STRING  (2)

	STRING  shift 20
	.  error


state 5
	section : S_PARAMETER . BEGIN params END  (3)

	BEGIN  shift 21
	.  error


state 6
	section : S_METHODS . BEGIN methods END  (4)
	section : S_METHODS . LPAREN expr RPAREN BEGIN methods END  (5)

	BEGIN  shift 22
	LPAREN  shift 23
	.  error


state 7
	section : S_SIGNALS . BEGIN signals END  (11)
	section : S_SIGNALS . LPAREN expr RPAREN BEGIN signals END  (12)
